# bash-shell-replica

./: .gitignore  CMakeLists.txt  README.md
integration_tests/: commented_command_tests.sh  exit_command_tests.sh  input_redirection_tests.sh  multiple_commands_tests.sh  output_redirection_tests.sh  pipe_operator_tests.sh  precedence_tests.sh  single_command_tests.sh  test_literal_tets.sh  test_symbolic_tets.sh
src/: Assignment2main.cpp  and.cpp  and.h  base.hpp  command.cpp  command.h  decorator.h  input.cpp  input.h  main.cpp  or.cpp  or.h  outputAppend.cpp  outputAppend.h  outputOverride.cpp  outputOverride.h  pipe.cpp  pipe.h  semiColon.cpp  semiColon.h
unit_tests/: unit_test.cpp
